# BSU-infa

./: .gitignore  README.md
1_Sem/TP9/MinMax/: CMakeLists.txt  tests.cpp
2_Sem/Lab01/AlphabetVector/: CMakeLists.txt  CharVectorManager.cpp  CharVectorManager.h  main.cpp
2_Sem/Lab01/AlphabetVector/Vector/: VectorIterator.h
2_Sem/TP01/OneDimensionalArray/SinglyLinkedList/: CMakeLists.txt  Node.h  SinglyLinkedList.h  SinglyLinkedListEmptyException.cpp  SinglyLinkedListEmptyException.h  SinglyLinkedListException.cpp  SinglyLinkedListException.h  SinglyLinkedListIncrementException.cpp  SinglyLinkedListIncrementException.h  SinglyLinkedListIterator.h
KP1/: squeeze.cpp
KP2/: Node.h  Vector.h
Lab1/: TheBiggestNumber.cpp
Lab11/: Division.cpp  Division.h  EmptyFileException.h  Exception.cpp  ExpressionException.cpp  ExpressionsManager.cpp  ExpressionsManager.h  FileLib.h  Multiplication.cpp  Multiplication.h  Operator.h  Parser.cpp  RationalFraction.cpp  RationalFraction.h  RationalFractionOperation.cpp  RationalFractionOperation.h  Subtraction.cpp  Subtraction.h  Sum.cpp  Sum.h  Validator.cpp  Validator.h  input.txt  log.txt  main.cpp  output.txt
Lab12/: CMakeLists.txt  Exception.h  FileException.h  FileManager.h  FileNotFoundException.cpp  FileNotFoundException.h  Manager.h  NodeNotFoundException.cpp  input.txt  main.cpp
Lab2/: DigitsSum.cpp  NextDate.cpp  PowerOfTwo.cpp  SequenceSum.cpp
Lab3/: AllDifferentDigitsNumbersLessThanN.cpp  DifferentDigitsWithArray.cpp  DifferentDigitsWithoutArray.cpp  FareySequence.cpp  KDigit.cpp  PerfectNumber.cpp
Lab4/: EvenTimes.cpp  MyLib.cpp  MyLib.h  Polynomial.cpp  SortAscDesc.cpp  TheLargestMultiplication.cpp
Lab5/: EvenSpiral.cpp  IsSubstrOrSubset.cpp  MagicSquare.cpp  Map.cpp  OneDimensionalArrayLib.cpp  TwoDimensionalArrayLib.cpp  TwoDimensionalArrayLib.h
Lab6/: ArrayCalculator.cpp  OneDimensionalArrayLib.h  Resize.cpp  TwoDimensionalArrayLib.cpp  TwoDimensionalArrayLib.h
Lab7/: digitsNumbersOtherSymbols.cpp  operators.cpp  wordRemove.cpp
Lab8/: ComplexNumberOperators.cpp  ComplexNumberQueue.cpp  ComplexNumberQueue.h  ComplexNumberQueueNode.cpp  Stack.h  (+6 more)
TP9/Triangle/: CMakeLists.txt  README.txt  Triangle.h  tests.cpp
(+882 files in other folders)
